--- a/documentation/components/MySkillsComponent.html
+++ b/documentation/components/MySkillsComponent.html
@@ -768,10 +768,12 @@ export class MySkillsComponent implements OnInit {
     &lt;div class&#x3D;&quot;skills-section&quot;&gt;
         &lt;img src&#x3D;&quot;assets/img/shadows/my-skills.svg&quot; alt&#x3D;&quot;Shadow&quot; class&#x3D;&quot;shadow&quot;&gt;
         &lt;div class&#x3D;&quot;skills-content&quot;&gt;
-            &lt;div class&#x3D;&quot;icon-div&quot; [class.animationSlideInLeft]&#x3D;&quot;isVisible&quot;&gt;
-                &lt;div *ngFor&#x3D;&quot;let icon of icons&quot; class&#x3D;&quot;icons&quot;&gt;
-                    &lt;a class&#x3D;&quot;icon&quot;&gt;&lt;img src&#x3D;&quot;{{ &#x27;assets/img/skill-icons/&#x27; + icon.source }}&quot; alt&#x3D;&quot;{{ icon.name }}&quot;&gt;&lt;/a&gt;
-                    &lt;p&gt;{{ icon.name }}&lt;/p&gt;
+            &lt;div class&#x3D;&quot;icon-div&quot;&gt;
+                &lt;div class&#x3D;&quot;icon-content&quot; [class.animationSlideInLeft]&#x3D;&quot;isVisible&quot;&gt;
+                    &lt;div *ngFor&#x3D;&quot;let icon of icons&quot; class&#x3D;&quot;icons&quot;&gt;
+                        &lt;a class&#x3D;&quot;icon&quot;&gt;&lt;img src&#x3D;&quot;{{ &#x27;assets/img/skill-icons/&#x27; + icon.source }}&quot; alt&#x3D;&quot;{{ icon.name }}&quot;&gt;&lt;/a&gt;
+                        &lt;p&gt;{{ icon.name }}&lt;/p&gt;
+                    &lt;/div&gt;
                 &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class&#x3D;&quot;title-content&quot;&gt;
@@ -815,8 +817,10 @@ export class MySkillsComponent implements OnInit {
                 <pre class="line-numbers"><code class="language-scss">.skills {
     display: flex;
     justify-content: center;
-    scroll-margin-top: 114px;
+    scroll-margin-top: 100px;
     margin-top: 120px;
+    position: relative;
+    z-index: 4;
 }
 
 .skills-section {
@@ -840,9 +844,10 @@ export class MySkillsComponent implements OnInit {
     align-items: center;
 }
 
-.icon-div {
+.icon-content {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
     gap: 123px;
     row-gap: 56px;
     position: relative;
@@ -875,7 +880,6 @@ export class MySkillsComponent implements OnInit {
 }
 
 .icon {
-    height: 60px;
     transition: 100ms ease-in-out;
 
     &amp;:hover {
@@ -975,11 +979,16 @@ export class MySkillsComponent implements OnInit {
     }
 
     .icon-div {
-        margin-left: unset;
-        padding: 70px 25px;
-        gap: 54px;
+        display: flex;
         justify-content: center;
-        margin-bottom: 100px;
+        align-items: center;
+        width: 100%;
+    }
+
+    .icon-content {
+        padding-top: 70px;
+        padding-bottom: 130px;
+        justify-content: space-around;
     }
 
     .title-content {
@@ -1001,7 +1010,7 @@ export class MySkillsComponent implements OnInit {
     }
 
     .button-div {
-        top: 435px;
+        top: 397px;
     }
 
     .shadow {
@@ -1009,33 +1018,13 @@ export class MySkillsComponent implements OnInit {
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1242px) {
     .skills-section {
-        max-width: 1200px;
-    }
-
-    .icon-div {
-        gap: 70px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .skills-section {
-        max-width: 1011px;
+        max-width: 1242px;
     }
 
     .button-div {
-        top: 635px;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .skills-section {
-        max-width: 1100px;
-    }
-
-    .icon-div {
-        gap: 40px;
+        top: 553px;
     }
 }
 
@@ -1044,37 +1033,24 @@ export class MySkillsComponent implements OnInit {
         max-width: 1024px;
     }
 
-    .icon-div {
-        gap: 100px;
-    }
-
     .title-header {
         p {
             width: 338px;
         }
     }
 
-    .icons {
-        width: 77px;
-
-        p {
-            font-size: 14px;
-            line-height: 16.8px;
-        }
-    }
-
-    .icon {
-        height: 100px;
-        display: flex;
-        align-items: flex-end;
-
-        img {
-            height: 45px;
-        }
-    }
-
     .shadow {
         right: 534px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .skills-section {
+        max-width: 820px;
+    }
+
+    .button-div {
+        top: 709px;
     }
 }
 
@@ -1094,7 +1070,28 @@ export class MySkillsComponent implements OnInit {
         right: -23px;
     }
 
+    .icon-content {
+        gap: 30px;
+    }
+
+    .icons {
+        p {
+            font-size: 14px;
+            line-height: 16.8px;
+        }
+    }
+
+    .icon {
+        display: flex;
+        align-items: flex-end;
+
+        img {
+            height: 45px;
+        }
+    }
+
     .button-div {
+        top: 380px;
 
         button {
             font-size: 16px;
@@ -1111,13 +1108,13 @@ export class MySkillsComponent implements OnInit {
     }
 }
 
-@media screen and (max-width: 707px) {
+@media screen and (max-width: 727px) {
     .skills-section {
-        max-width: 707px;
+        max-width: 727px;
     }
 
     .button-div {
-        top: 835px;
+        top: 510px;
     }
 }
 
@@ -1127,12 +1124,18 @@ export class MySkillsComponent implements OnInit {
         max-width: 530px;
     }
 
-    .button-div {
-        top: 1235px;
-    }
-
     .shadow {
         right: 234px;
+    }
+}
+
+@media screen and (max-width: 491px) {
+    .skills-section {
+        max-width: 491px;
+    }
+
+    .button-div {
+        top: 640px;
     }
 }
 
@@ -1142,21 +1145,17 @@ export class MySkillsComponent implements OnInit {
     }
 }
 
-@media screen and (max-width: 354px) {
+@media screen and (max-width: 373px) {
     .skills-section {
-        max-width: 354px;
+        max-width: 373px;
     }
 
     .button-div {
-        top: 2235px;
+        top: 898px;
     }
 }
 
 @media screen and (max-width: 375px) {
-    .skills {
-        scroll-margin-top: 120px;
-    }
-
     .skills-section {
         max-width: 375px;
     }
@@ -1176,6 +1175,16 @@ export class MySkillsComponent implements OnInit {
 @media screen and (max-width: 320px) {
     .skills-section {
         max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 255px) {
+    .skills-section {
+        max-width: 255px;
+    }
+
+    .button-div {
+        top: 1549px;
     }
 }</code></pre>
     </div>
@@ -1205,7 +1214,7 @@ export class MySkillsComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div id="skills" class="skills">    <div class="skills-section">        <img src="assets/img/shadows/my-skills.svg" alt="Shadow" class="shadow">        <div class="skills-content">            <div class="icon-div" [class.animationSlideInLeft]="isVisible">                <div *ngFor="let icon of icons" class="icons">                    <a class="icon"><img src="{{ \'assets/img/skill-icons/\' + icon.source }}" alt="{{ icon.name }}"></a>                    <p>{{ icon.name }}</p>                </div>            </div>            <div class="title-content">                <div class="border"></div>                <div class="title-header" [class.animationFadeIn]="isVisible">                    <div class="title-div">                        @if (languageService.language == \'English\') {                        <h2>My skills</h2>                        <p>I have grown my frontend developments skills that have allowed me to create different                            real                            projects.</p>                        }                        @if (languageService.language == \'German\') {                        <h2>Kompetenzen</h2>                        <p>Ich habe meine Fähigkeiten in der Frontend-Entwicklung erweitert, was es mir ermöglicht hat,                            verschiedene reale Projekte zu erstellen.</p>                        }                    </div>                    <div class="button-div">                        <a href="#contact" class="button-content">                            @if (languageService.language == \'English\') {                            <button class="button">Get in touch</button>                            }                            @if (languageService.language == \'German\') {                            <button class="button">Kontakt</button>                            }                        </a>                    </div>                </div>            </div>        </div>    </div></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div id="skills" class="skills">    <div class="skills-section">        <img src="assets/img/shadows/my-skills.svg" alt="Shadow" class="shadow">        <div class="skills-content">            <div class="icon-div">                <div class="icon-content" [class.animationSlideInLeft]="isVisible">                    <div *ngFor="let icon of icons" class="icons">                        <a class="icon"><img src="{{ \'assets/img/skill-icons/\' + icon.source }}" alt="{{ icon.name }}"></a>                        <p>{{ icon.name }}</p>                    </div>                </div>            </div>            <div class="title-content">                <div class="border"></div>                <div class="title-header" [class.animationFadeIn]="isVisible">                    <div class="title-div">                        @if (languageService.language == \'English\') {                        <h2>My skills</h2>                        <p>I have grown my frontend developments skills that have allowed me to create different                            real                            projects.</p>                        }                        @if (languageService.language == \'German\') {                        <h2>Kompetenzen</h2>                        <p>Ich habe meine Fähigkeiten in der Frontend-Entwicklung erweitert, was es mir ermöglicht hat,                            verschiedene reale Projekte zu erstellen.</p>                        }                    </div>                    <div class="button-div">                        <a href="#contact" class="button-content">                            @if (languageService.language == \'English\') {                            <button class="button">Get in touch</button>                            }                            @if (languageService.language == \'German\') {                            <button class="button">Kontakt</button>                            }                        </a>                    </div>                </div>            </div>        </div>    </div></div></div>'
     var COMPONENTS = [{'name': 'AboutMeComponent', 'selector': 'app-about-me'},{'name': 'AboveTheFoldComponent', 'selector': 'app-above-the-fold'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BurgerMenuComponent', 'selector': 'app-burger-menu'},{'name': 'ContactComponent', 'selector': 'app-contact'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ImprintComponent', 'selector': 'app-imprint'},{'name': 'InProgressComponent', 'selector': 'app-in-progress'},{'name': 'MailComponent', 'selector': 'app-mail'},{'name': 'MySkillsComponent', 'selector': 'app-my-skills'},{'name': 'PortfolioComponent', 'selector': 'app-portfolio'},{'name': 'PrivacyPolicyComponent', 'selector': 'app-privacy-policy'},{'name': 'WorkComponent', 'selector': 'app-work'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'MySkillsComponent'};
