--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="img-div" [class.animationSlideInRight]="isVisible">
+        <div class="img-div" [class.slideInRight]="isVisible">
             <div class="profile-img">
                 <img src="assets/img/piri-profile.png" alt="">
             </div>
