--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -23,6 +23,7 @@
     transition: opacity 125ms linear;
     position: relative;
     overflow-y: visible;
+    overflow-x: hidden;
 }
 
 .about-me-content {
@@ -73,13 +74,17 @@
 }
 
 .img-div {
-    position: relative;
     width: 50%;
     display: flex;
     align-items: center;
+    position: absolute;
     scroll-snap-align: start;
     opacity: 0;
     transition: opacity 125ms linear;
+}
+
+.slideInRight {
+    animation: slideRight 1.25s linear forwards;
 }
 
 .profile-img {
@@ -106,4 +111,21 @@
     width: 267px;
     height: 0;
     border-top: 4px solid var(--light-blue);
+}
+
+@keyframes slideRight {
+    0% {
+        right: -2000px;
+        opacity: 0;
+    }
+
+    50% {
+        right: -1000px;
+        opacity: 1;
+    }
+
+    100% {
+        right: 0;
+        opacity: 1;
+    }
 }
