updated frontend to fullstack

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -9,13 +9,13 @@
             }
             <div class="text-div">
                 @if (languageService.language == 'English') {
-                <p>Hi, I am a Front-end developer based in Kreuzlingen, Switzerland. I am passionate about creating
+                <p>Hi, I am a Fullstack developer based in Kreuzlingen, Switzerland. I am passionate about creating
                     efficient and innovative web solutions. I have a diverse skill set, including proficiency in
                     JavaScript, Angular, REST APIs, and more. I aim to continue my journey as a Fullstack Developer and
                     complete my Computer Science degree.</p>
                 }
                 @if (languageService.language == 'German') {
-                <p>Hallo, ich bin Frontend-Entwickler mit Sitz in Kreuzlingen, Schweiz. Ich habe eine Leidenschaft für
+                <p>Hallo, ich bin Fullstack-Entwickler mit Sitz in Kreuzlingen, Schweiz. Ich habe eine Leidenschaft für
                     die Erstellung effizienter und innovativer Web-Lösungen. Mein vielseitiges Können umfasst unter
                     anderem fundierte Kenntnisse in JavaScript, Angular, REST APIs und mehr. Mein Ziel ist es, meine
                     Laufbahn als Fullstack-Entwickler fortzusetzen und mein Informatikstudium abzuschliessen.</p>
