--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -26,10 +26,10 @@
                                 <h3 class="title-name" [class.animationSlideInRight]="isVisible">Pirathib Mahalingam
                                 </h3>
                                 @if (languageService.language == 'English') {
-                                <p class="title-profession" [class.typewriter]="isVisible">FRONTEND DEVELOPER</p>
+                                <p class="title-profession" [class.typewriter]="isVisible">FULLSTACK DEVELOPER</p>
                                 }
                                 @if (languageService.language == 'German') {
-                                <p class="title-profession" [class.typewriter]="isVisible">FRONTEND-ENTWICKLER</p>
+                                <p class="title-profession" [class.typewriter]="isVisible">FULLSTACK-ENTWICKLER</p>
                                 }
 
                             </span>
