--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,17 +12,14 @@
             <div class="contact-undersection">
                 <div class="text-div">
                     @if (languageService.language == 'English') {
-                    <h5>Got a problem to solve?</h5>
-                    <p>Contact me through this form, I am interested in hearing from you, knowing your ideas and
-                        contributing to
-                        your projects with my work.</p>
-                    <p>Need a Frontend developer? <b>Contact me!</b></p>
+                    <h5>Want to connect or share ideas=</h5>
+                    <p>I'm always open to exchanging knowledge, discussing projects or learning about what you're working on.</p>
+                    <p>If you're into frontend development or tech in general - feel free to reach out!</p>
                     }
                     @if (languageService.language == 'German') {
-                    <h5>Haben Sie ein Problem zu lösen?</h5>
-                    <p>Kontaktieren Sie mich über dieses Formular, ich bin daran interessiert, von Ihnen zu hören, Ihre
-                        Ideen kennenzulernen und zu Ihren Projekten mit meiner Arbeit beizutragen.</p>
-                    <p>Brauchen Sie einen Frontend-Entwickler? <b>Kontaktieren Sie mich!</b></p>
+                    <h5>Lust auf Austausch oder neue Ideen?</h5>
+                    <p>Ich freue mich über jede Nachricht - ob zum gemeinsamen Lernen, Erfahrungsaustausch oder um über Projekte zu sprechen.</p>
+                    <p>Wenn du dich für Frontend-Entwicklung oder Tech-Themen interessierst: Schreib mir gerne!</p>
                     }
                 </div>
                 <div class="input-div">
