--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -16,13 +16,13 @@
                     <div class="title-div">
                         @if (languageService.language == 'English') {
                         <h2>My skills</h2>
-                        <p>I have grown my frontend developments skills that have allowed me to create different
+                        <p>I have grown my fullstack developments skills that have allowed me to create different
                             real
                             projects.</p>
                         }
                         @if (languageService.language == 'German') {
                         <h2>Kompetenzen</h2>
-                        <p>Ich habe meine Fähigkeiten in der Frontend-Entwicklung erweitert, was es mir ermöglicht hat,
+                        <p>Ich habe meine Fähigkeiten in der Fullstack-Entwicklung erweitert, was es mir ermöglicht hat,
                             verschiedene reale Projekte zu erstellen.</p>
                         }
 
